conventional_commits_linter_lib/src/commits/commit/tests/snapshots/conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_6.snap
---
source: conventional_commits_linter_lib/src/commits/commit/tests/mod.rs
expression: linting_errors
---
[
    NonConventionalCommitsSpecification,
    PrecedingWhitespace,
]
